--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build": "yarn run playroom:build",
     "playroom:start": "playroom start",
     "playroom:build": "playroom build"
   },
