--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "dependencies": {
     "autoprefixer": "^9.0.0",
     "babel-loader": "^8.1.0",
+    "postcss": "^8.1.9",
     "postcss-loader": "^4.0.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "reakit": "^1.2.5",
-    "tailwindcss": "^1.9.4"
+    "reakit": "^1.3.0",
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
     "playroom": "^0.22.3"
